apps/ping/ping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
  namespace: default
  annotations:
    # Magic annotation: Tells cert-manager to automatically use your issuer
    # cert-manager.io/cluster-issuer: selfsigned-issuer
    # 1. Tell Traefik to force secure entrypoints and TLS:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # 2. Tell cert-manager to handle the Let's Encrypt DNS-01 challenge:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ping.littlehomelab.com # Your custom local domain
    secretName: utility-ping-tls-secret # Where cert-manager will save the certificate
  rules:
  - host: ping.littlehomelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: utility-ping-service
            port:
              number: 80
